In progress. Uberjar and GraalVM not working